--- a/CalOrdersJET/src/js/views/productDetail.html
+++ b/CalOrdersJET/src/js/views/productDetail.html
@@ -28,7 +28,7 @@
         <h2 style="margin-bottom:0">Product Detail</h2>
     </div>
 
-        <!-- global error messages -->
+    <!-- global error messages -->
     <div class="oj-flex-item oj-messaging-inline-container" id="pageErrorContainer" aria-live="polite" hidden>
         <div class="oj-padding-vertical"></div>
         <div class="oj-message oj-message-error">
@@ -42,7 +42,7 @@
         </div>
     </div>
     <!-- end global error message -->
-    
+
     <!-- Page Content -->
 
     <div class="oj-panel oj-flex-item oj-panel-shadow-md">
@@ -103,8 +103,9 @@
 
                 <div class="oj-flex">
                     <div class="oj-flex-item">
-                         <input class="product-quantity" id="quantity" data-bind="value: product().quantity" aria-label="quantity" type="number" min="1" max="10000"/>
+                        <input class="product-quantity" id="quantity" data-bind="value: product().quantity" aria-label="quantity" type="number" min="1" max="10000"/>
 
+                        <div class="oj-padding-vertical"></div>
 
                         <button id= "addToCart" data-bind="click: addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button>
                     </div>
