--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -47,7 +47,7 @@
     <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap oj-panel-shadow-md">
         <div id="productSearchNavigationPanel" class="oj-panel oj-sm-2 oj-flex-item oj-sm-only-hide" style="min-width: 250px">
             <!-- ko if: user --> 
-            <div class="oj-flex oj-panel oj-panel-shadow-md">
+            <div class="oj-flex oj-panel">
                 <div class="oj-flex-item">
                     <div class="oj-flex">
                         <div style="font-weight: bold; font-size: 20px; align-content: center" class="oj-flex-item" data-bind="text: 'Cart Summary'"></div>
