[#140875075] Fixed alignment isses for mobile device (added spaceing between text and buttons).  Also updated the 'Product Compare' page to make it more compact so it would fit on a single page for mobile.

--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -97,6 +97,7 @@
             </div>
         </div>
 
+        <div class="oj-padding-vertical"></div>
 
         <!-- Action buttons (Continue Shopping and Order) -->
         <div class="oj-flex oj-sm-justify-content-flex-end">
