--- a/CalOrdersJET/src/js/views/orderConfirmation.html
+++ b/CalOrdersJET/src/js/views/orderConfirmation.html
@@ -105,8 +105,10 @@
             </div>
         </div>
 
+        <div class="oj-padding-vertical"></div>
+        
         <div class="oj-flex oj-sm-justify-content-flex-end">
-
+            
             <div class="oj-flex">    
 
                 <button id= "continueShopping" 
