--- a/CalOrdersJET/src/js/views/orderDetail.html
+++ b/CalOrdersJET/src/js/views/orderDetail.html
@@ -26,6 +26,10 @@
 
     <!-- Page Title -->
     <div id="pageTitleContainer" class="oj-flex-item oj-sm-6">
+        <h2 style="margin-bottom:0">Order Detail<span class="fa fa-spinner fa-spin" style="margin-left: 0.5em"/></h2>
+    </div>
+
+    <div id="pageTitleContainer2" class="oj-flex-item oj-sm-6" style="display: none;">
         <h2 style="margin-bottom:0">Order Detail</h2>
     </div>
 
@@ -52,7 +56,7 @@
                 <a data-bind="click: navigateToOrderHistory">Back to Order History</a>
             </div>
         </div>
-        
+
         <div class="oj-padding-vertical"></div>
 
         <div class="oj-flex">
