[#140869399] Added text on the About page regarding browser support.

--- a/CalOrdersJET/src/js/views/about.html
+++ b/CalOrdersJET/src/js/views/about.html
@@ -11,12 +11,29 @@
 
             <!-- large template -->
             <script type="text/html" id="lg_xl_template">
-                <div id="lg_xl" style="width: 40em; word-wrap: break-word;"> <p>CalOrders is a revolutionary products and services ordering solution brought to you by <a href="http://www.oncorellc.com" target="_blank">OnCore Consulting LLC.</a> With CalOrders you can easily order, maintain, and track products and services across multiple vendors. CalOrders is also fully responsive for easy access on mobile, tablet, and computing devices. Thank you and welcome to CalOrders.</p></div>
+                <div id="lg_xl" style="width: 40em; word-wrap: break-word;"> 
+                    <p>CalOrders is a revolutionary products and services ordering solution brought 
+                        to you by <a href="http://www.oncorellc.com" target="_blank">OnCore Consulting LLC.</a> 
+                        With CalOrders you can easily order, maintain, and track products and services across multiple 
+                        vendors. CalOrders is also fully responsive for easy access on mobile, tablet, and computing devices. 
+                        Thank you and welcome to CalOrders.</p>
+                    
+                    <p>CalOrders is best accessed with a modern browser which supports HTML5.  If you must use Internet Explorer, 
+                        we recommend changing your settings to not cache and to reload the content on every site visit.</p>
+                </div>
                 </script>
 
                 <!-- small template -->
                 <script type="text/html" id="sm_md_template">
-                    <div id="sm_md" style="width: 100%; word-wrap: break-word;"> <p>CalOrders is a revolutionary products and services ordering solution brought to you by <a href="http://www.oncorellc.com" target="_blank">OnCore Consulting LLC.</a> With CalOrders you can easily order, maintain, and track products and services across multiple vendors. CalOrders is also fully responsive for easy access on mobile, tablet, and computing devices. Thank you and welcome to CalOrders.</p></div>  
+                    <div id="sm_md" style="width: 100%; word-wrap: break-word;">
+                        <p>CalOrders is a revolutionary products and services ordering solution brought 
+                            to you by <a href="http://www.oncorellc.com" target="_blank">OnCore Consulting LLC.</a> 
+                            With CalOrders you can easily order, maintain, and track products and services across multiple vendors. 
+                            CalOrders is also fully responsive for easy access on mobile, tablet, and computing devices. 
+                            Thank you and welcome to CalOrders.</p>
+                    <p>CalOrders is best accessed with a modern browser which supports HTML5.  If you must use Internet Explorer, 
+                        we recommend changing your settings to not cache and to reload the content on every site visit.</p>
+                    </div>  
                     </script>
 
                     <!-- display template -->
