[#140875075] Updated issue where the product search was not dispaly results after coming from the product detail

--- a/CalOrdersJET/src/css/calorders.css
+++ b/CalOrdersJET/src/css/calorders.css
@@ -119,6 +119,10 @@
 
 .product-detail-name {
     font-weight: bold;
+}
+
+.product-compare-attribute {
+    font-weight: bold;
     background: #cccccc
 }
 
