--- a/CalOrdersJET/src/js/views/productCompare.html
+++ b/CalOrdersJET/src/js/views/productCompare.html
@@ -53,9 +53,11 @@
 
         <a data-bind="click: navigateToProductSearch">Back to Search Results</a>
 
+        <div class="oj-padding-vertical"></div>
+
         <table class="product-compare-table">
             <tr>
-                <td colspan="2" class="product-detail-name">Product</td>
+                <td colspan="2" class="product-compare-attribute">Product</td>
             </tr>
             <tr>
 
@@ -115,7 +117,7 @@
                 </td>
             </tr>
             <tr>
-                <td  colspan="2" class="product-detail-name">Description</td>
+                <td  colspan="2" class="product-compare-attribute">Description</td>
             </tr>
             <tr>
                 <td>
@@ -135,7 +137,7 @@
                 </td>
             </tr>
             <tr>
-                <td  colspan="2" class="product-detail-name">Vendor</td>
+                <td  colspan="2" class="product-compare-attribute">Vendor</td>
             </tr>
             <tr>
                 <td>
@@ -146,7 +148,7 @@
                 </td>
             </tr>
             <tr>
-                <td  colspan="2" class="product-detail-name">SKU</td>
+                <td  colspan="2" class="product-compare-attribute">SKU</td>
             </tr>
             <tr>
                 <td>
@@ -157,7 +159,7 @@
                 </td>
             </tr>
             <tr>
-                <td  colspan="2" class="product-detail-name">Contract Line Item</td>
+                <td  colspan="2" class="product-compare-attribute">Contract Line Item</td>
             </tr>
             <tr>
                 <td>
@@ -168,7 +170,7 @@
                 </td>
             </tr>
             <tr>
-                <td  colspan="2" class="product-detail-name">Manufacturer</td>
+                <td  colspan="2" class="product-compare-attribute">Manufacturer</td>
             </tr>
             <tr>
                 <td>
@@ -179,7 +181,7 @@
                 </td>
             </tr>
             <tr>
-                <td  colspan="2" class="product-detail-name">Manufacturer Part Number</td>
+                <td  colspan="2" class="product-compare-attribute">Manufacturer Part Number</td>
             </tr>
             <tr>
                 <td>
@@ -190,7 +192,7 @@
                 </td>
             </tr>
             <tr>
-                <td  colspan="2" class="product-detail-name">Product Unit</td>
+                <td  colspan="2" class="product-compare-attribute">Product Unit</td>
             </tr>
             <tr>
                 <td>
@@ -201,7 +203,7 @@
                 </td>
             </tr>
             <tr>
-                <td  colspan="2" class="product-detail-name">Category</td>
+                <td  colspan="2" class="product-compare-attribute">Category</td>
             </tr>
             <tr>
                 <td>
