[#140869399] Fixed static text on login page

--- a/CalOrdersJET/src/js/views/login.html
+++ b/CalOrdersJET/src/js/views/login.html
@@ -65,7 +65,7 @@
                 
                  <div id="registerPanel" class="oj-flex-item" aria-label="Register" tabindex="0" role="link">
                      <!--<span>Do you need to <a href="#">register</a> for a new account?</span>-->
-                     <span>To access the system as an user, enter 'rickybobby' or 'carleybobby'.</span>
+                     <span>To access the system as a user, enter 'rickybobby' or 'carleybobby'.</span>
                      <div class="oj-padding-vertical"></div>
                      <span>To access the system as an administrator, enter 'joeadmin' or 'tomadmin'.</span>
                 </div>
